# bmi203-project1

./: README.md  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
